# agn-approx

./: .buildinfo  .gitignore  .pre-commit-config.yaml  1_mnist.html  2_custom_network.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/agnapprox/datamodules/: approx_datamodule.html  mnist.html
_modules/agnapprox/nets/: alexnet.html  mobilenetv2.html  resnet.html  vgg.html
_modules/agnapprox/utils/: error_stats.html  model.html  select_multipliers.html
_sources/: 1_mnist.ipynb.txt
_sources/autoapi/agnapprox/datamodules/: index.rst.txt
_sources/autoapi/agnapprox/utils/: index.rst.txt
autoapi/: index.html
autoapi/agnapprox/: index.html
autoapi/agnapprox/agnapprox/: index.html
autoapi/agnapprox/datamodules/approx_datamodule/: index.html
autoapi/agnapprox/datamodules/cifar10/: index.html
autoapi/agnapprox/datamodules/format_tinyimagenet/: index.html
autoapi/agnapprox/datamodules/mnist/: index.html
autoapi/agnapprox/datamodules/tinyimagenet200/: index.html
autoapi/agnapprox/nets/: index.html
autoapi/agnapprox/nets/alexnet/: index.html
autoapi/agnapprox/nets/approxnet/: index.html
autoapi/agnapprox/nets/base/: index.html
autoapi/agnapprox/nets/lenet5/: index.html
autoapi/agnapprox/nets/mobilenetv2/: index.html
autoapi/agnapprox/utils/: index.html
docs/: .gitignore  1_mnist.ipynb  Makefile  conf.py  make.bat
docs/_build/html/: .buildinfo  1_mnist.html  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
experiments/: alexnet_cifar.py  experiment.py  lenet5_mnist.py  qos_experiment.py  quant_accuracy_experiment.py  resnet_cifar.py  squeezenet_imagenet200.py  vgg_imagenet200.py
experiments/htp_accuracy/: alexnet_cifar.py  resnet_cifar.py  squeezenet_imagenet200.py  vgg_imagenet200.py
src/agnapprox/: __init__.py
src/agnapprox/datamodules/: __init__.py  approx_datamodule.py  cifar10.py  cifar100.py  format_tinyimagenet.py  mnist.py  tinyimagenet200.py
src/agnapprox/libs/: __init__.py  approxlib.py  evoapprox.py
src/agnapprox/nets/: __init__.py  alexnet.py  approxnet.py  lenet5.py  mobilenetv2.py  resnet.py  squeezenet.py  vgg.py
src/agnapprox/utils/: __init__.py  error_stats.py  model.py  select_multipliers.py
tests/: test_agnapprox.py  test_datamodules.py  test_nets.py
(+73 files in other folders)
